--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "servidor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon servidor.js"
+    "start": "ROBOT=sensible JWT_SECRET=cambiame PUERTO=3000 nodemon servidor.js"
   },
   "author": "@SAldrin",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "mongoose": "*",
     "morgan": "*",
     "nodemon": "^1.11.0",
+    "sha256": "^0.2.0",
     "winston": "^2.3.1"
   }
 }
