--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "compression": "*",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "helmet": "*",
     "jsonwebtoken": "*",
