--- a/Frontend/Web/package.json
+++ b/Frontend/Web/package.json
@@ -11,9 +11,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "nodemon": "^1.11.0",
+    "postcss": "^6.0.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.8",
+    "redux": "^3.6.0",
     "serve": "^5.1.5",
     "webpack": "^2.5.1"
   },
