--- a/Frontend/Web/package.json
+++ b/Frontend/Web/package.json
@@ -10,7 +10,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.11.0",
+    "material-ui": "^0.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
