--- a/Frontend/Web/package.json
+++ b/Frontend/Web/package.json
@@ -14,6 +14,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "serve": "^5.1.5",
     "webpack": "^2.5.1"
   },
