--- a/Frontend/Web-construccion/package.json
+++ b/Frontend/Web-construccion/package.json
@@ -12,10 +12,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "material-auto-rotating-carousel": "^1.4.0",
     "material-ui": "^0.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
     "serve": "^5.1.5",
     "uglify-js": "^3.0.10",
